crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bool_op__invalid_rhs_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bool_op/invalid_rhs_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            18,
        ),
        range: 0..31,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        10,
                    ),
                    range: 0..17,
                    value: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(
                                9,
                            ),
                            range: 0..17,
                            op: And,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            1,
                                        ),
                                        range: 0..1,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Lambda(
                                    ExprLambda {
                                        node_index: NodeIndex(
                                            8,
                                        ),
                                        range: 6..17,
                                        parameters: Some(
                                            Parameters {
                                                range: 13..14,
                                                node_index: NodeIndex(
                                                    2,
                                                ),
                                                posonlyargs: [],
                                                args: [
                                                    ParameterWithDefault {
                                                        range: 13..14,
                                                        node_index: NodeIndex(
                                                            5,
                                                        ),
                                                        parameter: Parameter {
                                                            range: 13..14,
                                                            node_index: NodeIndex(
                                                                4,
                                                            ),
                                                            name: Identifier {
                                                                id: Name("y"),
                                                                range: 13..14,
                                                                node_index: NodeIndex(
                                                                    3,
                                                                ),
                                                            },
                                                            annotation: None,
                                                        },
                                                        default: None,
                                                    },
                                                ],
                                                vararg: None,
                                                kwonlyargs: [],
                                                kwarg: None,
                                            },
                                        ),
                                        body: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    7,
                                                ),
                                                range: 16..17,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        17,
                    ),
                    range: 19..31,
                    value: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(
                                16,
                            ),
                            range: 19..31,
                            op: Or,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            12,
                                        ),
                                        range: 19..20,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Yield(
                                    ExprYield {
                                        node_index: NodeIndex(
                                            15,
                                        ),
                                        range: 24..31,
                                        value: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        14,
                                                    ),
                                                    range: 30..31,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x and lambda y: y
  |       ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
2 |
3 | x or yield y
  |


  |
1 | x and lambda y: y
2 |
3 | x or yield y
  |      ^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
